--- a/README.org
+++ b/README.org
@@ -24,6 +24,46 @@ $ make
 
 The output site will be rendered in =public/=.
 
+** RSS Feeds
+
+I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
+
+- Each export block in the project translates the full site, file by file, to another format (taking into account excludes, includes)
+  As we have very different settings for the posts than we have for tutorials, we have different entries in the project for translating each subset.
+
+- Sitemaps allow to generate a map of all converted files in a single org file.
+  Eg. a sitemap in posts, will generate an org file with a list of links to all posts. This is particularly useful for the rss exporter.
+
+- We have an export entry in the project that goes over __posts/_, takes a dummy export function, but generates a sitemap. This allows us to end with a _rss.org_ file without really exporting anything.
+
+- Then we use another entry in the project, that uses the _RSS_ exporter, including only _rss.org_ in order to generate _rss.xml_
+
+- Now, the default sitemap function generates something like:
+
+  #+BEGIN_SRC txt
+    * Entries
+      - [[One entry][http://link]]
+      - [[Second entry][http://link]]
+  #+END_SRC
+
+  Those will not be exported correctly to a list of links. Only the headline  will be exported in the RSS file.
+
+  #+BEGIN_SRC txt
+    * [[One entry][http://link]]
+    * [[Second entry][http://link]]
+  #+END_SRC
+
+- By default, the link will reference the file where the link appears. Something like
+  #+BEGIN_SRC txt
+  <link>http://rss.org#section</link>
+  #+END_SRC
+
+  To change this we use _org-rss-use-entry-url-as-guid_ and set the _RSS_PERMALINK_ property of the headline when generating the sitemap.
+  The _RSS_ exporter will then use the property for the _<link>_ tag content.
+
+- The custom entry formatter adds a headline to a temp buffer and then uses _org-set-property_ to set the custom properties.
+- The sitemap function uses _org-list-to-generic_ to create a list of headlines without adding a star, as it will be added by the entry function.
+
 * Features
 
 *** Redirection
