--- a/setup.org
+++ b/setup.org
@@ -48,8 +48,7 @@ You can find this setup in my [[https://gitlab.suse.de/dmacvicar/dotfiles.suse][
 - [[https://www.jabra.com.de/business/speakerphones/jabra-speak-series/jabra-speak-510][Jabra Speaker]] for mobile conferences involving more than one person in the room
 
 ** Development environment
-
-[[https://www.gnu.org/software/emacs][- Emacs]] as editor for most languages, with [[https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el][many]] extensions. Some highlights:
+- [[https://www.gnu.org/software/emacs][Emacs]] as editor for most languages, with [[https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el][many]] extensions. Some highlights:
   - [[https://melpa.org/#/lsp-mode][LSP mode]] to take advantage of all [[https://en.wikipedia.org/wiki/Language_Server_Protocol][LSP]] servers out there
   - [[https://magit.vc][Magit]] as a git front-end
 - [[https://github.com/tmux/tmux/wiki][tmux]] to manage my consoles and to split the screen in my favourite layout (editor left side, two command lines right side)
