--- a/setup.org
+++ b/setup.org
@@ -2,13 +2,15 @@
 
 * General setup
 
-Most of my personal computing is done on a [[https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230][Thinkpad X230]] from 2012.
+I like Thinkpads. Until July 2021, I used a 12" [[https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230][Thinkpad X230]] from 2012. Nowadays I use a [[https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1][Thinkpad X13]].
 
 - A quite fresh [[https://software.opensuse.org/distributions/tumbleweed][openSUSE Tumbleweed]] as operating system/distro
-- [[https://www.gnome.org][GNOME]] as desktop environment, no customizations
-- [[https://github.com/dmacvicar/dotfiles][dotfiles]] managed with git and [[https://www.gnu.org/software/stow][GNU Stow]]
-- [[https://syncthing.net][Syncthing]] to Peer-to-Peer sync some files across different devices
-- Passwords managed with [[https://keepassxc.org][KeePassXC]] (synced with Syncthing)
+- Lately, I install user software using [[https://nixos.org/][Nix]] on top of Linux, instead of relying mostly on my distro packages. It allows to share installations across users while still allowing per-user profiles and  versions. When using different users for private/work, this works very well.
+- [[https://www.gnome.org][GNOME]] as desktop environment, no customization.
+- [[https://github.com/dmacvicar/dotfiles][dotfiles]] managed with git and [[https://www.gnu.org/software/stow][GNU Stow]].
+- +[[https://syncthing.net][Syncthing]] to Peer-to-Peer sync some files across different devices+
+  Not used much anymore since [[https://github.com/syncthing/syncthing-lite][Syncthing Lite]] was deprecated and stopped working on Mobile. Moved most syncthing to Nextcloud.
+- Passwords managed with [[https://keepassxc.org][KeePassXC]] (synced with Nextcloud)
 - [[https://www.yubico.com/products][Yubikey]] device and [[https://developers.yubico.com/OATH][yubikey-oath]] for 2FA on Desktop and mobile
 - [[https://www.mozilla.org/exp/firefox/new][Firefox]] as Web browser, with some extensions
   - [[https://addons.mozilla.org/firefox/addon/multi-account-containers][Multi-Account Containers]] to isolate websites
@@ -18,24 +20,22 @@ Most of my personal computing is done on a [[https://www.lenovo.com/us/en/laptop
 - [[https://nextcloud.com][NextCloud]] to host shared files
 - [[https://nextcloud.com/clients][NextCloud clients]] to sync files with NextCloud on desktop and mobile
 - [[https://orgmode.org][Org-mode]] ("Your life in text mode") on top of [[https://www.gnu.org/software/emacs][Emacs]] to organize notes, journals and information. It also powers this website.
-  - Synced with Syncthing
+  - Synced with Nextcloud
   - [[https://play.google.com/store/apps/details?id=com.orgzly][Orgzly]] as TODO widget on Android
   - [[https://play.google.com/store/apps/details?id=com.madlonkay.orgro][Orgro]] as Org file viewer on Android
 - [[http://www.tarsnap.com][tarsnap]] for backups
+- [[https://restic.net/][restic]] for backups
 
 You can also read some details about the setup for my [[file:music.org][music hobby activities]].
 
 I also have a small Home "Lab"
-  - 2 Raspberry Pi 3 running openSUSE Leap 15.1
+  - 3 Raspberry Pi 3/4 running openSUSE Leap 15.2 and [k3s](https://k3s.io/)
   - 1 [[https://linux-sunxi.org/Pine64][Pine64]] running OpenBSD 6.7
-  - [[https://www.home-assistant.io/][HomeAssistant]]
-  - Managed by [[https://docs.saltstack.com/en/latest/topics/ssh][salt-ssh]]
+  - 1 [[https://linux-sunxi.org/Pine64][Pine64]] running FreeBSD
+  - [[https://www.home-assistant.io/][HomeAssistant]].
+  - Managed by [[https://docs.saltstack.com/en/latest/topics/ssh][salt-ssh]] (looking for a replacement).
 
 * Work
-
-Most of my work happens on a [[https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x220][Thinkpad X220]] from 2011, except for video-conferencing, for which I use my iPad, as the laptop is not powerful enough.
-
-*** Work mail setup
 
 - [[http://isync.sourceforge.net][mbsync]] to synchronize IMAP locally
 - [[https://marlam.de/msmtp][msmtp]] to send email
@@ -44,21 +44,20 @@ Most of my work happens on a [[https://www.lenovo.com/us/en/laptops/thinkpad/x-s
 - plugins/utilities
   - [[https://melpa.org/#/outlook][outlook package]] to reply HTML email
 
-You can find this setup in my [[https://gitlab.suse.de/dmacvicar/dotfiles.suse][internal dotfiles]] repository.
+This setup is kept in an internal dotfiles repository.
 
 *** Other
 - [[https://github.com/abraunegg/onedrive][unofficial onedrive client]] to sync files to OneDrive
-- [[https://restic.net/][restic]] for backups
 - [[https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html][Bose 700]] noise cancelling headphones for a great confcall experience
-- [[https://www.jabra.com.de/business/speakerphones/jabra-speak-series/jabra-speak-510][Jabra Speaker]] for mobile conferences involving more than one person in the room
 
 * Development environment
 
 - [[https://www.gnu.org/software/emacs][Emacs]] as editor for most languages, with [[https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el][many]] extensions. Some highlights:
+  - [[https://github.com/hlissner/doom-emacs][Doom Emacs]] as the Emacs distribution
   - [[https://melpa.org/#/lsp-mode][LSP mode]] to take advantage of all [[https://en.wikipedia.org/wiki/Language_Server_Protocol][LSP]] servers out there
   - [[https://magit.vc][Magit]] as a git front-end
 - [[https://github.com/tmux/tmux/wiki][tmux]] to manage my consoles and to split the screen in my favourite layout (editor left side, two command lines right side)
-- Given my open-source background, I have to dig in code writen in many languages. My go-to languages are C++, Golang and Ruby depending on the task.
+- Given my open-source background, I have to dig in code written in many languages. My go-to languages are C++, Golang and Ruby depending on the task.
 
 *** C++
 - [[https://cmake.org][CMake]] as build system and to fetch dependencies
